.tempCodeRunnerFile.txt

Tue 14 Jan 2020 10:08:35 CST
Example.java:23: error: ';' expected
      System.out.println("All numbers are different")
                                                     ^
1 error
Input first number: Input second number: Input third number: All numbers are different
